--- a/spec/refs.bib
+++ b/spec/refs.bib
@@ -64,39 +64,38 @@
   doi     = {10.1109/IEEESTD.1985.82928}
 }
 
-@TECHREPORT{Heeren02generalizinghindley-milner,
-  author = {Bastiaan Heeren and Bastiaan Heeren and Jurriaan Hage and Jurriaan Hage and Doaitse Swierstra and Doaitse Swierstra},
-  title = {Generalizing Hindley-Milner Type Inference Algorithms},
+@techreport{Heeren02generalizinghindley-milner,
+  author      = {Bastiaan Heeren and Bastiaan Heeren and Jurriaan Hage and Jurriaan Hage and Doaitse Swierstra and Doaitse Swierstra},
+  title       = {Generalizing Hindley-Milner Type Inference Algorithms},
   institution = {},
-  year = {2002}
+  year        = {2002}
 }
 
-@Article{Dybjer1994,
-  author={Dybjer, Peter},
-  title={Inductive families},
-  journal={Formal Aspects of Computing},
-  year={1994},
-  month={07},
-  day={01},
-  volume={6},
-  number={4},
-  pages={440-465},
-  abstract={A general formulation of inductive and recursive definitions in Martin-L{\"o}f's type theory is presented. It extends Backhouse's `Do-It-Yourself Type Theory' to include inductive definitions of families of sets and definitions of functions by recursion on the way elements of such sets are generated. The formulation is in natural deduction and is intended to be a natural generalisation to type theory of Martin-L{\"o}f's theory of iterated inductive definitions in predicate logic.},
-  issn={1433-299X},
-  doi={10.1007/BF01211308},
-  url={https://doi.org/10.1007/BF01211308}
+@article{Dybjer1994,
+  author   = {Dybjer, Peter},
+  title    = {Inductive families},
+  journal  = {Formal Aspects of Computing},
+  year     = {1994},
+  month    = {07},
+  day      = {01},
+  volume   = {6},
+  number   = {4},
+  pages    = {440-465},
+  abstract = {A general formulation of inductive and recursive definitions in Martin-L{\"o}f's type theory is presented. It extends Backhouse's `Do-It-Yourself Type Theory' to include inductive definitions of families of sets and definitions of functions by recursion on the way elements of such sets are generated. The formulation is in natural deduction and is intended to be a natural generalisation to type theory of Martin-L{\"o}f's theory of iterated inductive definitions in predicate logic.},
+  issn     = {1433-299X},
+  doi      = {10.1007/BF01211308},
+  url      = {https://doi.org/10.1007/BF01211308}
 }
 
-@ARTICLE{Diaconescu1975-df,
-  title     = "Axiom of choice and complementation",
-  author    = "Diaconescu, Radu",
-  abstract  = "It is shown that an intuitionistic model of set theory with the
-               axiom of choice has to be a classical one.",
-  journal   = "Proc. Am. Math. Soc.",
-  publisher = "American Mathematical Society (AMS)",
-  volume    =  51,
-  number    =  1,
-  pages     = "176--178",
-  year      =  1975,
-  language  = "en"
+@article{Diaconescu1975-df,
+  title     = {Axiom of choice and complementation},
+  author    = {Diaconescu, Radu},
+  abstract  = {It is shown that an intuitionistic model of set theory with the
+               axiom of choice has to be a classical one.},
+  journal   = {Proc. Am. Math. Soc.},
+  publisher = {American Mathematical Society (AMS)},
+  volume    = 51,
+  number    = 1,
+  pages     = {176--178},
+  year      = 1975
 }
